# IDEautomation

./: .dockerignore  .env.example  .gitignore  .vercelignore  .voiceide-projects.json  Astronaut Illustration.webm  Dockerfile  README.md  SUPABASE_SCHEMA.sql  index.html  package-lock.json  package.json  railway.json  vercel.json  vite.config.ts
.voiceide/skills/: _TEMPLATE.md  accessibility-and-keyboard.md  agentic-web-builder-runbook.md  hybrid-surgical-fix.md  inspection-audit-first.md  preview-quality-and-validation.md  routing-and-information-architecture.md  supabase-live-ready-integration.md  tool-first-repo-evidence.md  tools-mcp-skill-boundaries.md  ui-system-and-design-tokens.md  ux-states-and-error-copy.md
api/: .env.example  README.md  __init__.py  agent.py  agent_evals.py  agent_intent.py  agent_mcp.py  agent_memory.py  agent_modes.py  agent_router.py  agent_runtime.py  agent_skills.py  agent_tools.py  app_state.py  auth_identity.py  auth_policy.py  auth_router.py  clara.py  fs.py  hybrid.py  main.py  oauth_bridge.mjs  oauth_runtime.py  preferences.py  preferences_router.py  project_templates.py  projects.py  projects_router.py  pyproject.toml  raka.py  requirements.txt  secrets_store.py  settings.py  settings_router.py  supabase_store.py
api/tests/: test_agent_regressions.py
docs/: SUPABASE_SCHEMA.sql  agent-architecture.md  hosted-agent-scheme.md  supabase-agent-jobs.sql  supabase-agent-rag.sql  supabase-provider-models.sql
scripts/: env.py  generate_astronaut_assets.py  preview-audit.mjs  start-railway.sh
src/: App.tsx  api.ts  app.css  main.tsx
(+23 files in other folders)
