[project]
name = "voice-ide-api"
version = "0.1.0"
description = "Local API service for Voice IDE (files/tools/agent/voice)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "python-multipart",
  "supabase>=2.28.3",
]

[tool.setuptools]
packages = ["api"]
include-package-data = true

[tool.setuptools.package-dir]
api = "."

[tool.setuptools.package-data]
api = ["*.mjs"]

[tool.uvicorn]
factory = false



















